Fix selection misalignment issue

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -16,6 +16,7 @@ textarea {
   position: absolute;
   font-family: monospace; 
   font-size: 12;
+  resize: none;
   background-color: transparent;
 }
 
@@ -23,7 +24,7 @@ textarea {
   z-index: 1;
   width: 100%;
   height: 100%;
-  overflow: auto;
+  overflow: hidden;
   position: absolute;
   background-color: transparent;
 }
